...
                        )}
                    </Pressable>
                    <Text
                        className="text-slate-100 text-lg"
                        style={{ fontFamily: 'Outfit-SemiBold' }}
                    >
                        Locations
                    </Text>
                    <View className="w-10" />
                </View>

                <LocationSearchBar
                    value={search.searchQuery}
...
